[gd_scene load_steps=34 format=3 uid="uid://cji2m3uvkanf0"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_olcld"]
[ext_resource type="Texture2D" uid="uid://dcnnu07okoynt" path="res://assets/mainbar.png" id="2_plm5b"]
[ext_resource type="Texture2D" uid="uid://fh5uww0rurcf" path="res://assets/textbar.png" id="2_tuhkd"]
[ext_resource type="Theme" uid="uid://c163hgn8rdr67" path="res://text.tres" id="2_w4u17"]
[ext_resource type="Texture2D" uid="uid://y76fcvyhs828" path="res://assets/inputbox.png" id="3_wnni5"]
[ext_resource type="Texture2D" uid="uid://b443hrb5hal3f" path="res://assets/timedot.png" id="4_e8nlh"]
[ext_resource type="Texture2D" uid="uid://bg0dplmpok3eg" path="res://assets/tickbox.png" id="5_d3m1j"]
[ext_resource type="Script" path="res://scripts/player.gd" id="5_fy875"]
[ext_resource type="Texture2D" uid="uid://d3rar3bkajmms" path="res://assets/2ndarybar.png" id="5_j1tej"]
[ext_resource type="AudioStream" uid="uid://dwbwudf2cp27o" path="res://assets/timershow.mp3" id="5_sf73r"]
[ext_resource type="FontFile" uid="uid://b3cy4rofnvp6v" path="res://assets/54_HelveticaNeue MediumCond.ttf" id="6_0qfin"]
[ext_resource type="Texture2D" uid="uid://dlgm02han2pah" path="res://assets/lockinconnector.png" id="7_0ica6"]
[ext_resource type="Texture2D" uid="uid://collqu6x7um4r" path="res://assets/background.jpg" id="8_oobdu"]
[ext_resource type="Texture2D" uid="uid://ou0ff16507mv" path="res://assets/answerbox.png" id="8_u14gr"]
[ext_resource type="FontFile" uid="uid://uk8rbia8dpfi" path="res://assets/47_Helvetica 65 Medium.ttf" id="10_s0e62"]
[ext_resource type="Texture2D" uid="uid://dts6x74kajml5" path="res://assets/ex.jpg" id="10_umjfn"]
[ext_resource type="Texture2D" uid="uid://eixaa2mss8pg" path="res://assets/questionbox.png" id="11_xiqn0"]
[ext_resource type="FontFile" uid="uid://djfuuaasv157m" path="res://assets/50_Tiresias Keyfont V2.ttf" id="12_m13l0"]
[ext_resource type="AudioStream" uid="uid://brgc0gvw03b35" path="res://assets/timer.mp3" id="18_axkme"]
[ext_resource type="AudioStream" uid="uid://bncvo06yacmtd" path="res://assets/answerhold.mp3" id="19_5wm88"]
[ext_resource type="AudioStream" uid="uid://ccjfc4q65vfi1" path="res://assets/answerreveal+tick.mp3" id="20_bb5rf"]
[ext_resource type="AudioStream" uid="uid://y5twnyc2js2f" path="res://assets/alllockin.mp3" id="22_h0an7"]
[ext_resource type="AudioStream" uid="uid://qdaiwhn4yxkj" path="res://assets/2ndsubmit.mp3" id="23_lq56a"]
[ext_resource type="AudioStream" uid="uid://00rdbuqvoboh" path="res://assets/1stsubmit.mp3" id="24_r7mpy"]

[sub_resource type="Animation" id="Animation_blcsq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("panel_3/answer_box:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("panel_3/answer_box:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("panel_3/res_lbl:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:onShowResult")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7sdkf"]
resource_name = "answer_holding"
length = 12.0
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../baiting_heh")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("19_5wm88")
}],
"times": PackedFloat32Array(0.0333333)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("panel_3/answer_box:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 1.33333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("panel_3/res_lbl:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 1.33333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("panel_3/answer_box:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("panel_3/res_lbl:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:onShowResult")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.33333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_6c1cm"]
resource_name = "tick_box_for_player"
length = 4.0
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Answerreveal+tick")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("20_bb5rf")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.06667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"decide_who_wins"
}]
}

[sub_resource type="Animation" id="Animation_ntvwr"]
resource_name = "timer_ticking"
length = 16.0
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../timer_ticking")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("18_axkme")
}],
"times": PackedFloat32Array(4)
}
tracks/0/use_blend = true
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Timershow")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_sf73r")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.266667, 4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"show_timer"
}, {
"args": [],
"method": &"_stop_proc"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(5.06667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_timer"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g4o8s"]
_data = {
"RESET": SubResource("Animation_blcsq"),
"answer_holding": SubResource("Animation_7sdkf"),
"tick_box_for_player": SubResource("Animation_6c1cm"),
"timer_ticking": SubResource("Animation_ntvwr")
}

[sub_resource type="LabelSettings" id="LabelSettings_fwp1d"]
font = ExtResource("6_0qfin")
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_s5r1m"]
font = ExtResource("6_0qfin")
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_3d60e"]
line_spacing = 1.0
font = ExtResource("10_s0e62")
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_eqk8l"]
font = ExtResource("12_m13l0")
font_size = 28

[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("1_olcld")
metadata/_edit_use_anchors_ = true

[node name="2Ndsubmit" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("23_lq56a")

[node name="1Stsubmit" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("24_r7mpy")

[node name="main_anim" type="AnimationPlayer" parent="Control"]
libraries = {
"": SubResource("AnimationLibrary_g4o8s")
}

[node name="Mainbar" type="Sprite2D" parent="Control"]
position = Vector2(586.875, 245)
scale = Vector2(0.6, 0.585)
texture = ExtResource("2_plm5b")

[node name="Secondarybar" type="Sprite2D" parent="Control"]
self_modulate = Color(1, 0.478431, 0.478431, 1)
show_behind_parent = true
z_index = 1
position = Vector2(590, 489)
rotation = 3.14159
scale = Vector2(0.7, 0.03)
texture = ExtResource("5_j1tej")
centered = false
offset = Vector2(-41, 0)
flip_v = true

[node name="tickboxes_cnt_2" type="Control" parent="Control"]
anchors_preset = 0
offset_left = 891.0
offset_top = 442.0
offset_right = 1037.0
offset_bottom = 485.0

[node name="Tickbox" type="Sprite2D" parent="Control/tickboxes_cnt_2"]
visible = false
position = Vector2(35, 30)
rotation = -0.0349066
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_d3m1j")

[node name="Tickbox2" type="Sprite2D" parent="Control/tickboxes_cnt_2"]
visible = false
position = Vector2(72, 29)
rotation = -0.0349066
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_d3m1j")

[node name="Tickbox3" type="Sprite2D" parent="Control/tickboxes_cnt_2"]
visible = false
position = Vector2(109, 28)
rotation = -0.0349066
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_d3m1j")

[node name="tickboxes_cnt_1" type="Control" parent="Control"]
anchors_preset = 0
offset_left = 148.0
offset_top = 439.0
offset_right = 288.0
offset_bottom = 488.0

[node name="Tickbox" type="Sprite2D" parent="Control/tickboxes_cnt_1"]
visible = false
position = Vector2(99, 33)
rotation = 0.0349066
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_d3m1j")

[node name="Tickbox2" type="Sprite2D" parent="Control/tickboxes_cnt_1"]
visible = false
position = Vector2(62, 32)
rotation = 0.0349066
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_d3m1j")

[node name="Tickbox3" type="Sprite2D" parent="Control/tickboxes_cnt_1"]
visible = false
position = Vector2(24.9999, 31)
rotation = 0.0349066
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_d3m1j")

[node name="timer_panel" type="Control" parent="Control"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 0
offset_left = 118.0
offset_top = 396.0
offset_right = 418.0
offset_bottom = 436.0
rotation = 0.0349066

[node name="Timedot10" type="Sprite2D" parent="Control/timer_panel"]
visible = false
position = Vector2(264.061, 25.8)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_e8nlh")

[node name="Timedot9" type="Sprite2D" parent="Control/timer_panel"]
visible = false
position = Vector2(238.077, 26.7076)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_e8nlh")

[node name="Timedot8" type="Sprite2D" parent="Control/timer_panel"]
visible = false
position = Vector2(212.058, 26.6154)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_e8nlh")

[node name="Timedot7" type="Sprite2D" parent="Control/timer_panel"]
visible = false
position = Vector2(186.039, 26.5237)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_e8nlh")

[node name="Timedot6" type="Sprite2D" parent="Control/timer_panel"]
visible = false
position = Vector2(159.264, 25.1429)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_e8nlh")

[node name="Timedot5" type="Sprite2D" parent="Control/timer_panel"]
visible = false
position = Vector2(132.932, 24.3756)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_e8nlh")

[node name="Timedot4" type="Sprite2D" parent="Control/timer_panel"]
visible = false
position = Vector2(105.878, 23.3192)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_e8nlh")

[node name="Timedot3" type="Sprite2D" parent="Control/timer_panel"]
visible = false
position = Vector2(78.825, 22.2626)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_e8nlh")

[node name="Timedot2" type="Sprite2D" parent="Control/timer_panel"]
visible = false
position = Vector2(50.7373, 20.2416)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_e8nlh")

[node name="Timedot" type="Sprite2D" parent="Control/timer_panel"]
visible = false
position = Vector2(23.9278, 17.8616)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_e8nlh")

[node name="timer_panel2" type="Control" parent="Control"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 0
offset_left = 759.0
offset_top = 415.0
offset_right = 1059.0
offset_bottom = 455.0
rotation = -0.0698132

[node name="Timedot" type="Sprite2D" parent="Control/timer_panel2"]
visible = false
position = Vector2(23.8582, 18.8591)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_e8nlh")

[node name="Timedot2" type="Sprite2D" parent="Control/timer_panel2"]
visible = false
position = Vector2(50.6675, 21.2393)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_e8nlh")

[node name="Timedot3" type="Sprite2D" parent="Control/timer_panel2"]
visible = false
position = Vector2(78.825, 22.2626)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_e8nlh")

[node name="Timedot4" type="Sprite2D" parent="Control/timer_panel2"]
visible = false
position = Vector2(105.878, 23.3192)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_e8nlh")

[node name="Timedot5" type="Sprite2D" parent="Control/timer_panel2"]
visible = false
position = Vector2(132.932, 24.3756)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_e8nlh")

[node name="Timedot6" type="Sprite2D" parent="Control/timer_panel2"]
visible = false
position = Vector2(159.264, 25.1429)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_e8nlh")

[node name="Timedot7" type="Sprite2D" parent="Control/timer_panel2"]
visible = false
position = Vector2(186.039, 26.5237)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_e8nlh")

[node name="Timedot8" type="Sprite2D" parent="Control/timer_panel2"]
visible = false
position = Vector2(212.058, 26.6154)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_e8nlh")

[node name="Timedot9" type="Sprite2D" parent="Control/timer_panel2"]
visible = false
position = Vector2(238.077, 26.7076)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_e8nlh")

[node name="Timedot10" type="Sprite2D" parent="Control/timer_panel2"]
visible = false
position = Vector2(264.061, 25.8)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_e8nlh")

[node name="panel_1" type="PanelContainer" parent="Control" node_paths=PackedStringArray("timer", "timer_panel")]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 412.0
offset_top = 440.0
offset_right = 512.0
offset_bottom = 490.0
mouse_filter = 2
script = ExtResource("5_fy875")
keyINCR = 87
keyDCR = 83
keyLOCK = 68
timer = NodePath("timer_1")
timer_panel = NodePath("../timer_panel")

[node name="player1_lbl" type="Label" parent="Control/panel_1"]
z_index = 1
layout_mode = 2
theme = ExtResource("2_w4u17")
text = "0%"
label_settings = SubResource("LabelSettings_fwp1d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="input_box_sprite_p1" type="Sprite2D" parent="Control/panel_1"]
self_modulate = Color(1, 1, 1, 0.862745)
show_behind_parent = true
z_index = 1
position = Vector2(52, 25)
scale = Vector2(0.348, 0.25)
texture = ExtResource("3_wnni5")

[node name="Lockinconnector" type="Sprite2D" parent="Control/panel_1"]
position = Vector2(146, 25)
scale = Vector2(0.35, 0.2)
texture = ExtResource("7_0ica6")

[node name="timer_1" type="Timer" parent="Control/panel_1"]
wait_time = 11.0
one_shot = true

[node name="panel_2" type="PanelContainer" parent="Control" node_paths=PackedStringArray("timer", "timer_panel")]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 662.0
offset_top = 440.0
offset_right = 762.0
offset_bottom = 490.0
mouse_filter = 2
script = ExtResource("5_fy875")
keyINCR = 4194320
keyDCR = 4194322
keyLOCK = 4194319
timer = NodePath("timer_2")
timer_panel = NodePath("../timer_panel2")

[node name="player2_lbl" type="Label" parent="Control/panel_2"]
z_index = 1
layout_mode = 2
theme = ExtResource("2_w4u17")
text = "0%"
label_settings = SubResource("LabelSettings_s5r1m")
horizontal_alignment = 1
vertical_alignment = 1

[node name="input_box_sprite_p1" type="Sprite2D" parent="Control/panel_2"]
self_modulate = Color(1, 1, 1, 0.862745)
show_behind_parent = true
z_index = 1
position = Vector2(52, 25)
scale = Vector2(0.348, 0.25)
texture = ExtResource("3_wnni5")

[node name="Lockinconnector" type="Sprite2D" parent="Control/panel_2"]
position = Vector2(-43, 25)
scale = Vector2(0.35, 0.2)
texture = ExtResource("7_0ica6")

[node name="timer_2" type="Timer" parent="Control/panel_2"]
wait_time = 11.0
one_shot = true

[node name="panel_3" type="PanelContainer" parent="Control"]
self_modulate = Color(1, 1, 1, 0)
z_index = 1
layout_mode = 0
offset_left = 537.0
offset_top = 440.0
offset_right = 637.0
offset_bottom = 492.0
mouse_filter = 2

[node name="answer_box" type="Sprite2D" parent="Control/panel_3"]
visible = false
self_modulate = Color(0.988667, 1, 0.66, 0.780392)
z_index = 1
position = Vector2(51.5, 26)
scale = Vector2(0.3, 0.25)
texture = ExtResource("8_u14gr")

[node name="res_lbl" type="Label" parent="Control/panel_3"]
visible = false
modulate = Color(1, 1, 1, 0)
z_index = 1
layout_mode = 2
theme = ExtResource("2_w4u17")
text = "0%"
label_settings = SubResource("LabelSettings_3d60e")
horizontal_alignment = 1
vertical_alignment = 1

[node name="scale_panel" type="PanelContainer" parent="Control"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 530.0
offset_top = 19.0
offset_right = 640.0
offset_bottom = 538.0
mouse_filter = 2

[node name="percentage_bar" type="Sprite2D" parent="Control/scale_panel"]
z_index = 1
position = Vector2(58, 445)
scale = Vector2(0.6, 0.565)
texture = ExtResource("2_tuhkd")
offset = Vector2(0, -365)

[node name="margin_que" type="PanelContainer" parent="Control"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 19.0
offset_top = 503.0
offset_right = 1173.0
offset_bottom = 615.0

[node name="question" type="Label" parent="Control/margin_que"]
layout_mode = 2
text = "lorem amogus sussy"
label_settings = SubResource("LabelSettings_eqk8l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="next" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1073.0
offset_top = 596.0
offset_right = 1127.0
offset_bottom = 627.0
text = "next "

[node name="start_timer" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1011.0
offset_top = 596.0
offset_right = 1066.0
offset_bottom = 627.0
text = "start"

[node name="ans" type="Button" parent="Control"]
layout_mode = 0
offset_left = 947.0
offset_top = 596.0
offset_right = 1002.0
offset_bottom = 627.0
text = "ans
"

[node name="Ex" type="Sprite2D" parent="Control"]
position = Vector2(1986, 1032)
texture = ExtResource("10_umjfn")

[node name="Questionbox" type="Sprite2D" parent="Control"]
z_index = -1
position = Vector2(580, 554)
scale = Vector2(0.9, 1)
texture = ExtResource("11_xiqn0")

[node name="Background" type="Sprite2D" parent="."]
show_behind_parent = true
z_index = -1
position = Vector2(576, 324)
scale = Vector2(0.9, 0.9)
texture = ExtResource("8_oobdu")

[node name="Timershow" type="AudioStreamPlayer" parent="."]

[node name="timer_ticking" type="AudioStreamPlayer" parent="."]

[node name="timer_end" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_axkme")

[node name="baiting_heh" type="AudioStreamPlayer" parent="."]

[node name="Answerreveal+tick" type="AudioStreamPlayer" parent="."]

[node name="Alllockin" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_h0an7")

[node name="Alllockin2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_h0an7")

[connection signal="dumb_sig" from="Control" to="Control/panel_1" method="_on_control_dumb_sig"]
[connection signal="dumb_sig" from="Control" to="Control/panel_2" method="_on_control_dumb_sig"]
[connection signal="sfx_sigc" from="Control/panel_1" to="Control" method="_on_panel_1_sfx_sigc"]
[connection signal="timeout" from="Control/panel_1/timer_1" to="Control/panel_1" method="_on_counting_down_b_4_ded_timeout"]
[connection signal="sfx_sigc" from="Control/panel_2" to="Control" method="_on_panel_2_sfx_sigc"]
[connection signal="timeout" from="Control/panel_2/timer_2" to="Control/panel_1" method="_on_counting_down_b_4_ded_timeout"]
[connection signal="pressed" from="Control/next" to="Control" method="_on_next_pressed"]
[connection signal="pressed" from="Control/start_timer" to="Control" method="_on_start_timer_pressed"]
[connection signal="pressed" from="Control/start_timer" to="Control/panel_1" method="_on_start_timer_pressed"]
[connection signal="pressed" from="Control/start_timer" to="Control/panel_2" method="_on_start_timer_pressed"]
[connection signal="pressed" from="Control/ans" to="Control" method="_on_ans_pressed"]
